# rust_kinect_depth_test

rust_kinect_depth_test/: Cargo.toml
rust_kinect_depth_test/src/: main.rs
rust_kinect_depth_test/src/glwinhelp/: imgwin.rs
src/: main.rs
src/glwinhelp/: mod.rs
