[package]
name = "rust_kinect_depth_test"
version = "0.1.0"
authors = ["noah <noah.kennedy.professional@gmail.com>"]

[dependencies]
freenectrs = { git = "https://github.com/Entscheider/freenect-rs.git"}
image = "0.12"
genmesh = "0.4"
obj = { version = "0.5", features = ["usegenmesh"] }
glium = "0.16"